mobile responsive try. will proceed after presentation

--- a/src/App.css
+++ b/src/App.css
@@ -407,3 +407,18 @@ body {
 .product-name {
     width: 40%;
 }
+
+
+@media screen and (max-width: 768px) {
+    .category-list {
+        display: grid !important;
+        justify-content: center!important;
+        gap: 2em!important;
+        font-size: 16px;
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .category-list li button {
+        font-size: 16px;
+    }
+}
